edits dropdown styling

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <div class="dropdown">
                     <button class="dropbtn">Animal Type</button>
                     <div class="dropdown-content">
-                        <a href="#">Dog</a>
-                        <a href="#">Cat</a>
-                        <a href="#">Exotic</a>
-                        <a href="#">No preference</a>
+                        <option>Dog</option>
+                        <option>Cat</option>
+                        <option>Exotic</option>
+                        <option>No preference</option>
                     </div>
                 </div>
             </div>
@@ -35,9 +35,9 @@
                 <div class="dropdown">
                     <button class="dropbtn">Gender</button>
                     <div class="dropdown-content">
-                        <a href="#">Male</a>
-                        <a href="#">Female</a>
-                        <a href="#">No Preference</a>
+                        <option>Male</option>
+                        <option>Female</option>
+                        <option>No Preference</option>
                     </div>
                 </div>
             </div>
@@ -45,10 +45,10 @@
                 <div class="dropdown">
                     <button class="dropbtn">Age</button>
                     <div class="dropdown-content">
-                        <a href="#">Under 1 year</a>
-                        <a href="#">1-5 years</a>
-                        <a href="#">5+ years</a>
-                        <a href="#">No preference</a>
+                        <option>Under 1 year</option>
+                        <option>1-5 years</option>
+                        <option>5+ years</option>
+                        <option>No preference</option>
                     </div>
                 </div>
             </div>
@@ -56,10 +56,10 @@
                 <div class="dropdown">
                     <button class="dropbtn">Size</button>
                     <div class="dropdown-content">
-                        <a href="#">Small</a>
-                        <a href="#">Medium</a>
-                        <a href="#">Large</a>
-                        <a href="#">No preference</a>
+                        <option>Small</option>
+                        <option>Medium</option>
+                        <option>Large</option>
+                        <option>No preference</option>
                     </div>
                 </div>
             </div>
